[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chord-dht-analysis"
version = "0.1.0"
dependencies = [
    "pandas~=2.2.2",
    "requests~=2.32.3",
    "beautifulsoup4~=4.12.3",
    "pytest~=8.3.3",
    "jupyter~=1.1.1",
    "matplotlib~=3.9.2",
]

[requires]
python = ">=3.11"